<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SMS2HoneycombActivity!</string>
    <string name="app_name">Text To Tab</string>
    
    
    <string name="button_send">Send</string>
    <string name="button_register">Create Account</string>
    <string name="button_login">Sign In</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_okay">Okay</string>
    
    <string name="menu_logout">Logout</string>
    <string name="menu_new_message">New Message</string>
    
    <string name="settings_settings_title">Settings</string>
	<string name="settings_about_title">About</string>
	<string name="settings_about_summary">About Text To Tab</string>
	<string name="settings_homepage_summary">Text To Tabs main web site.</string>
	<string name="settings_homepage_title">Homepage</string>
	<string name="settings_logout_description">Logout of Text To Tab</string>
	<string name="settings_reset_password_descrip">Reset your current password.</string>
	<string name="settings_options_title">Options</string>
    
    <string name="dialog_login_message">Logging in...</string>
    <string name="dialog_register_message">Registering...</string>
    
    <string name="parse_connection_error">An error occurred when attempting to connect to servers. Please try again later.</string>
    
    <string name="login_username_text">Username:</string>
    <string name="login_password_text">Password:</string>
    <string name="login_username_hint">Enter your username...</string>
    <string name="login_password_hint">Enter your password...</string>
    <string name="login_forgot_password">Forgot Password</string>
    
    <string name="invalid_username_taken">Username is unavailable.</string>
    <string name="invalid_email_taken">Email is already registered.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="invalid_username_whitespace">Invalid username. No whitespaces allowed.</string>
    <string name="invalid_password_whitespace">Invalid password.  No whitespace allowed.</string>
    <string name="invalid_email_none_entered">You must enter an email.</string>
    <string name="invalid_password_none_entered">You must enter a password.</string>
    <string name="invalid_username_none_entered">You must enter a username.</string>
    <string name="invalid_username_password">The username or password is incorrect. Please try again.</string>
    
    <string name="register_enter_username">Enter Desired Username: </string>
    <string name="register_enter_email">Enter Your Email:</string>
    <string name="register_enter_password">Enter Your Password:</string>
    <string name="register_cancel_btn_text">Cancel</string>
    <string name="register_btn_phone_text">Register</string>
    <string name="main_send_btn">Send</string>
    <string name="main_message_text">Message:</string>
    <string name="main_to_text">To:</string>
    <string name="main_logout_btn_text">Logout</string>
    <string name="message_list_text">Messages</string>
    <string name="conversation_new_btn_text">New Conversation</string>
    
    <string name="message_list_empty_target">You must specify someone to text before sending a message.</string>
    <string name="message_list_unsuccessful">The message was not sent. Please try again.</string>
    <string name="message_add_contact_button_txt">Contacts</string>
    <string name="menu_query_all">Query All</string>
    
</resources>
