<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:id="@+id/login_username_title_phone"
		android:text="@string/login_username_text">
	</TextView>
	<EditText 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:id="@+id/login_username_field_phone"
		android:hint="@string/login_username_hint" 
		android:singleLine="true" 
		android:imeOptions="actionNext">
		<requestFocus></requestFocus>
	</EditText>
	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:id="@+id/login_password_title_phone"
		android:text="@string/login_password_text">
	</TextView>
	<EditText 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:inputType="textPassword"
		android:id="@+id/login_password_field_phone" 
		android:hint="@string/login_password_hint"
		android:singleLine="true" 
		android:imeOptions="actionGo">
	</EditText>
	<TextView 
		android:id="@+id/blank_space" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_weight="1.0"
		android:paddingLeft="6dip" 
		android:paddingRight="6dip"
		android:paddingBottom="6dip" 
		android:text=" ">
	</TextView>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:gravity="center_vertical"
		android:background="@android:drawable/bottom_bar">
		<Button 
			android:id="@+id/login_login_btn_phone"
			android:layout_width="0dip" 
			android:layout_weight="1.0"
			android:layout_height="wrap_content" 
			android:text="@string/button_login" />
		<Button 
			android:id="@+id/login_cancel_btn_phone"
			android:layout_width="0dip" 
			android:layout_weight="1.0"
			android:layout_height="wrap_content" 
			android:text="@string/button_cancel" />
	</LinearLayout>
</LinearLayout>
