<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView 
		android:id="@+id/register_email_text_phone"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:text="@string/register_enter_email">
	</TextView>
	<EditText 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:id="@+id/register_email_phone"
		android:singleLine="true"
		android:imeOptions="actionNext">
		<requestFocus></requestFocus>
	</EditText>
	<TextView 
		android:id="@+id/register_username_text_phone"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:text="@string/register_enter_username">
	</TextView>
	<EditText 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:id="@+id/register_username_phone"
		android:singleLine="true"
		android:imeOptions="actionNext">
	</EditText>
	<TextView 
		android:id="@+id/register_password_text_phone"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:text="@string/register_enter_password">
	</TextView>
	<EditText 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:inputType="textPassword"
		android:id="@+id/register_password_phone"
		android:singleLine="true"
		android:imeOptions="actionGo">
		</EditText>
	<TextView 
		android:id="@+id/blank_space" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_weight="1.0"
		android:paddingLeft="6dip" 
		android:paddingRight="6dip"
		android:paddingBottom="6dip" 
		android:text=" ">
	</TextView>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:gravity="center_vertical|center"
		android:background="@android:drawable/bottom_bar"
		android:weightSum="1.0">
		<Button 
			android:id="@+id/register_btn_phone"
			android:layout_width="0dip" 
			android:layout_weight="0.50"
			android:layout_height="wrap_content"
			android:text="@string/register_btn_phone_text" />
	</LinearLayout>

</LinearLayout>
